[package]
name = "rune-macros"
version = "0.1.0"
description = "Procedural macro used to generate definitions for lisp functions."
edition.workspace = true

[lib]
path = "lib.rs"
proc-macro = true

[dependencies]
darling = "0.20.3"
quote = { workspace = true }
syn = { workspace = true }
proc-macro2 = { workspace = true }

[lints]
workspace = true
